--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
 
 		<title>Tier List Maker</title>
-	<link rel="stylesheet" type="text/css" href="website.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="website.css"> 
+
 	<script src="script.js"></script>
 </head>
 <body>
-	<h2>Josh and Leo's Tier List maker </h2>
+	<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col-md-2 div-1">
+      <img src="websitelogo.png" class="logo">
+    </div>
+    <div class="col-md-10 div-2">
+      <h3>Josh and Leo's Tier List maker </h3>
+    </div>
+  </div>
+  </div>
+</div>
+	
+	
 
 	<div id="tier-list">
 		<div class="tier red">
@@ -51,29 +65,27 @@
 			</ul>
 		</div>	
 			<div class="tier green">
-			<p>E Class</p>
+			<p>Hot Trash </p>
 			<ul class="list">
 				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
 			</ul>
-		</div>	
-			<div class="tier blue">
-			<p>Hot Trash</p>
-			<ul class="list">
-				<li><input type='text'></li>
-				<li><input type='text'></li>
-				<li><input type='text'></li>
-			</ul>
+		</div>
+		
 
 
 	<button id="save-button">Save Tier List</button>
 
-<img src="https://app.logo.com/view/logo_24353769-86f0-4146-a906-7c18ec495dfe">
-
 	<script>
 		// code for saving the tier list
 	</script>
+	<ul class="white">
+		<li> <a href="https://www.youtube.com/" target="_blank"> <h5> YouTube </h5> </a> </li>
+		<li> <a href="https://twitter.com/" target="_blank"> <h5> Twitter </h5> </a> </li>
+		<li> <a href="https://www.instagram.com/ethanlew1s/" target="blank"> <h5> Instagram </h5> </a>
+	</ul>
+
 </body>
 </html>
 
