--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
 				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
 			</ul>
 		</div>
 		<div class="tier oorange">
 			<p>A Class</p>
 			<ul class="list">
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
@@ -46,11 +54,19 @@
 				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
 			</ul>
 		</div>
 		<div class="tier yellow">
 			<p>C Class</p>
 			<ul class="list">
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
@@ -62,11 +78,19 @@
 				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
 			</ul>
 		</div>	
 			<div class="tier green">
 			<p>Hot Trash </p>
 			<ul class="list">
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
+				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
 				<li><input type='text'></li>
